Checking App Bug Fixes (SF-313, SF-321, SF-323) - Questions pane no longer appears on top of the main navigation drawer on smaller viewports - Progress circle now updates correctly if answers have been added to questions - When the chapter changes the menu selector now auto focuses on the selected chapter when opened

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
@@ -7,6 +7,9 @@
   #question-drawer {
     min-width: 300px;
     border: 0;
+    @include media-breakpoint-up(md) {
+      z-index: 1;
+    }
     &.mdc-drawer--modal {
       top: 0;
     }
